[incubator-kie-drools-6136] Migrate drools test coverage to JUnit5 - #7 (#6175)
* More tests migrated

* Migrated tests to Junit5

* Migrated drools-core

* Migrated alphanetwork compiler